# dagster-tuto

./: .gitignore  Makefile  README.md  playground.py  pyproject.toml
dagster-and-dbt/analytics/: .user.yml
dagster-and-dbt/analytics/models/marts/: daily_metrics.sql
dagster-and-dbt/analytics/models/sources/: raw_taxis.yml
dagster-and-dbt/dagster_university/: __init__.py  project.py
dagster-and-dbt/dagster_university/assets/: constants.py  dbt.py  trips.py
dagster-and-dbt/dagster_university/jobs/: __init__.py
dagster-and-dbt/dagster_university/resources/: __init__.py
dagster_university/: pyproject.toml  setup.py
dagster_university/dagster_university/: __init__.py
dagster_university/dagster_university/assets/: constants.py  metrics.py  requests.py  trips.py
dagster_university/dagster_university/jobs/: __init__.py
dagster_university/dagster_university/resources/: __init__.py  database.py
dagster_university/dagster_university/schedules/: __init__.py
dagster_university/dagster_university/sensors/: __init__.py
