[tool.poetry]
name = "dagster-tuto"
version = "2.0.0"
description = "Use Dagster to Orchestrate an ELT pipeline. And visualize NYC open data"
authors = ["Xavier Lai <xavier.l@cabaia.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "^1.8.9"
dagster_university = { "path" = "dagster_university/", develop = true }
dagster-pipes = "^1.8.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
